# aidays2026workshop

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  REUSE.toml  env.grok.example  env.infomaniak.example  env.openai.example  env.ppqai.example  env.vllm.example  mkslides.yml  pyproject.toml
.github/workflows/: pages.yml
dataset/: README.md  cs_students.csv  voting.csv
docs/: README.md  custom.css  presentation.md
src/aidays2026workshop/: 01_first_agent_solution_generic.py  01_first_agent_solution_generic_webchat.py  02_connect_4_structured_output.py  02_connect_4_structured_output_solution.py  03_naive_data_analysis.py  03_naive_data_analysis_solution.py  03_naive_data_analysis_solution_one_shot.py  04_data_analysis_codeagent_solution_generic.py  05_data_analysis_codeagent_plots.py  05_data_analysis_codeagent_plots_solution.py  06_data_analysis_codeagent_plot_with_tools.py  06_data_analysis_codeagent_plots_with_tools_solution.py  07_data_analysis_without_codeagent.py  07_data_analysis_without_codeagent_solution.py  07_data_analysis_without_codeagent_solution_with_plots.py  08_data_analysis_mcp.py  08_data_analysis_mcp_solution.py  11_search_product_mcp.py  11_search_product_mcp_solution.py  12_search_product_browser_use.py  12_search_product_browser_use_solution.py  21_bonus_mcps_app_data_analysis.py  21_bonus_mcps_app_data_analysis_solution.py  common.py  plot_mcp.py  plot_mcp_app.py
src/workshop/: 015_connect_4_structured_output.py  01_first_agent.py  01_first_agent_solution.py  01_first_agent_solution_generic.py  01_first_agent_solution_generic_webchat.py  01_first_agent_solution_open_ai_compatible.py  02_connect_4_structured_output.py  02_connect_4_structured_output_solution.py  02_naive_data_analysis.py  02_naive_data_analysis_solution.py  02_naive_data_analysis_solution_one_shot.py  03_data_analysis_codeagent_solution_generic.py  03_data_analysis_codeagent_solution_pandas.py  03_data_analysis_codeagent_solution_polars.py  03_naive_data_analysis.py  03_naive_data_analysis_solution.py  03_naive_data_analysis_solution_one_shot.py  04_data_analysis_codeagent.py  04_data_analysis_codeagent_plots.py  04_data_analysis_codeagent_plots_solution.py  04_data_analysis_codeagent_solution_generic.py  04_data_analysis_codeagent_solution_pandas.py  04_data_analysis_codeagent_solution_polars.py  05_data_analysis_codeagent_plot_with_tools.py  05_data_analysis_codeagent_plots.py  05_data_analysis_codeagent_plots_solution.py  05_data_analysis_codeagent_plots_with_tools_solution.py  06_data_analysis_codeagent_plot_with_tools.py  06_data_analysis_codeagent_plots_with_tools_solution.py  (+17 more)
tests/: __init__.py  test_common.py
(+6 files in other folders)
