[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[project]
name = "workshop"
version = "0.0.1"
description = "AI Days 2026 Workshop - First step with Agents"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "William Droz", email = "william.droz@idiap.ch" },
]

dependencies = [
    "browser-use>=0.5.9",
    "fastmcp>=2.14.5",
    "grimoireplot",
    "loguru>=0.7.3",
    "nicegui>=3.7.1",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "pydantic-ai>=1.59.0",
    "python-dotenv>=1.2.1",
    "smolagents[toolkit]>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]
docs = [
    "mkslides>=2.0.0",
]

scraping = [
    "playwright>=1.58.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
grimoireplot = { git = "ssh://git@gitlab.idiap.ch/wdroz/grimoireplot" }

[project.scripts]
plot_mcp = "workshop.plot_mcp:main"
